<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ekattorit.attendance.ui.report.SingleRangeAttendance">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_employee_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_employee"
            app:layout_constraintStart_toStartOf="@+id/sp_shift_lo"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <LinearLayout
            android:id="@+id/sp_shift_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_rectangle_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_employee_spinner">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_employee"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_date"

            app:layout_constraintEnd_toEndOf="@+id/tv_start_date"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date"
            app:layout_constraintTop_toBottomOf="@id/sp_shift_lo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_rectangle_round_fill"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:text="30 Aug 20" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/end_date"

            app:layout_constraintEnd_toEndOf="@+id/tv_end_date"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date"
            app:layout_constraintTop_toBottomOf="@id/sp_shift_lo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_rectangle_round_fill"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_start_date"
            app:layout_constraintTop_toBottomOf="@id/appCompatTextView2"
            tools:text="30 Aug 20" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/show_report"
            app:cornerRadius="32dp"
            android:textAllCaps="false"
            app:icon="@drawable/ic_eye"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />




        <LinearLayout
            android:id="@+id/item_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/btn_view_report">


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_first_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/first_in"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_last_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/first_out"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_single_attendance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/status_lo"
            app:layout_constraintTop_toBottomOf="@+id/item_title_bar"
            tools:listitem="@layout/item_view_single_attendance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/ic_not_found"
            android:drawablePadding="12dp"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_view_report" />


        <LinearLayout
            android:id="@+id/status_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_present"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green_deep"
                android:textStyle="bold"
                tools:text="Present: " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_absent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:textStyle="bold"
                tools:text="Absent: " />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>