<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ekattorit.attendance.ui.employee.AddEmployeeFace">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="4dp"
                android:text="@string/save_employee_face_title"
                android:textColor="@color/green"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:src="@drawable/ic_round_close" />


        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_rectangle_transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/worker_img"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="16dp">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp">

                <TableRow android:padding="12dp">

                    <TextView
                        android:id="@+id/card_id_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_id_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/separator"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_card_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="MILK-00001" />


                </TableRow>

                <TableRow
                    android:background="@color/gray_soft"
                    android:padding=".5dp" />


                <TableRow android:padding="12dp">

                    <TextView
                        android:id="@+id/card_owner_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_owner_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/separator"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_card_owner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Arif Rahman" />

                </TableRow>

                <TableRow
                    android:background="@color/gray_soft"
                    android:padding=".5dp" />

                <TableRow android:padding="12dp">

                    <TextView
                        android:id="@+id/card_unit_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/designation_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/separator"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_designation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="মশক কর্মী " />

                </TableRow>

                <TableRow
                    android:background="@color/gray_soft"
                    android:padding=".5dp" />

                <TableRow android:padding="12dp">

                    <TextView
                        android:id="@+id/milk_amount_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/word_no_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/separator"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_word_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="0" />

                </TableRow>


            </TableLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_new_face_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_face"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>